[gd_scene load_steps=14 format=2]

[ext_resource path="res://RoomGeneration.gd" type="Script" id=1]
[ext_resource path="res://Landmarks/burping_clam_icon.png" type="Texture" id=2]
[ext_resource path="res://Compass/Compass.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Plant/Temp-Bush.tscn" type="PackedScene" id=8]
[ext_resource path="res://Room.tscn" type="PackedScene" id=9]
[ext_resource path="res://Plant/Temp-Tree.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/HUD.gd" type="Script" id=11]
[ext_resource path="res://Temp_tileset.png" type="Texture" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=3]
resource_local_to_scene = true
0/name = "Temp_tileset.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Temp_tileset.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [ Vector2( 0, 0 ), SubResource( 2 ) ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 576, 384 )

[node name="World" type="Node2D"]

[node name="RoomGenerator" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="BranchForRooms" type="YSort" parent="RoomGenerator"]

[node name="StartingRoom" parent="RoomGenerator/BranchForRooms" instance=ExtResource( 9 )]
permanent = true
available_nodes = {
0: 0,
1: 1,
2: 0,
3: 0
}

[node name="TileMap" parent="RoomGenerator/BranchForRooms/StartingRoom" index="0"]
tile_set = SubResource( 3 )
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 1, 0, 6, 1, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 1, 0, 65542, 1, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 0, 0, 327697, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 0, 0, 393233, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0 )

[node name="CollisionShape2D" parent="RoomGenerator/BranchForRooms/StartingRoom" index="1"]
shape = SubResource( 4 )

[node name="Temp-Tree" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="0" instance=ExtResource( 10 )]
position = Vector2( 960, 384 )

[node name="Temp-Tree7" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="1" instance=ExtResource( 10 )]
position = Vector2( 1056, 296 )

[node name="Temp-Tree8" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="2" instance=ExtResource( 10 )]
position = Vector2( 960, 264 )

[node name="Temp-Tree9" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="3" instance=ExtResource( 10 )]
position = Vector2( 856, 216 )

[node name="Temp-Tree10" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="4" instance=ExtResource( 10 )]
position = Vector2( 704, 224 )

[node name="Temp-Tree11" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="5" instance=ExtResource( 10 )]
position = Vector2( 600, 168 )

[node name="Temp-Tree12" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="6" instance=ExtResource( 10 )]
position = Vector2( 312, 232 )

[node name="Temp-Tree13" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="7" instance=ExtResource( 10 )]
position = Vector2( 224, 304 )

[node name="Temp-Tree14" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="8" instance=ExtResource( 10 )]
position = Vector2( 240, 480 )

[node name="Temp-Tree15" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="9" instance=ExtResource( 10 )]
position = Vector2( 312, 568 )

[node name="Temp-Tree16" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="10" instance=ExtResource( 10 )]
position = Vector2( 480, 608 )

[node name="Temp-Tree17" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="11" instance=ExtResource( 10 )]
position = Vector2( 672, 600 )

[node name="Temp-Tree18" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="12" instance=ExtResource( 10 )]
position = Vector2( 896, 584 )

[node name="Temp-Tree19" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="13" instance=ExtResource( 10 )]
position = Vector2( 984, 504 )

[node name="Temp-Tree20" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="14" instance=ExtResource( 10 )]
position = Vector2( 912, 720 )

[node name="Temp-Tree21" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="15" instance=ExtResource( 10 )]
position = Vector2( 1136, 544 )

[node name="Temp-Tree22" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="16" instance=ExtResource( 10 )]
position = Vector2( 1112, 144 )

[node name="Temp-Tree23" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="17" instance=ExtResource( 10 )]
position = Vector2( 664, 64 )

[node name="Temp-Tree24" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="18" instance=ExtResource( 10 )]
position = Vector2( 208, 64 )

[node name="Temp-Tree2" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="19" instance=ExtResource( 10 )]
position = Vector2( 448, 512 )

[node name="Temp-Tree25" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="20" instance=ExtResource( 10 )]
position = Vector2( 248, 704 )

[node name="Temp-Tree26" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="21" instance=ExtResource( 10 )]
position = Vector2( 56, 400 )

[node name="Temp-Tree27" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="22" instance=ExtResource( 10 )]
position = Vector2( 936, 24 )

[node name="Temp-Tree3" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="23" instance=ExtResource( 10 )]
position = Vector2( 984, 144 )

[node name="Temp-Tree4" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="24" instance=ExtResource( 10 )]
position = Vector2( 456, 680 )

[node name="Temp-Tree5" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="25" instance=ExtResource( 10 )]
position = Vector2( 144, 488 )

[node name="Temp-Tree6" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="26" instance=ExtResource( 10 )]
position = Vector2( 152, 120 )

[node name="Temp-Bush" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="27" instance=ExtResource( 8 )]
position = Vector2( 408, 216 )

[node name="Temp-Bush2" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="28" instance=ExtResource( 8 )]
position = Vector2( 472, 184 )

[node name="Temp-Bush3" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="29" instance=ExtResource( 8 )]
position = Vector2( 336, 120 )

[node name="Temp-Bush4" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="30" instance=ExtResource( 8 )]
position = Vector2( 416, 48 )

[node name="Temp-Bush5" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="31" instance=ExtResource( 8 )]
position = Vector2( 776, 128 )

[node name="Temp-Bush10" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="32" instance=ExtResource( 8 )]
position = Vector2( 1056, 224 )

[node name="Temp-Bush11" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="33" instance=ExtResource( 8 )]
position = Vector2( 1096, 752 )

[node name="Temp-Bush12" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="34" instance=ExtResource( 8 )]
position = Vector2( 344, 656 )

[node name="Temp-Bush13" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="35" instance=ExtResource( 8 )]
position = Vector2( 192, 408 )

[node name="Temp-Bush14" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="36" instance=ExtResource( 8 )]
position = Vector2( 288, 408 )

[node name="Temp-Bush15" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="37" instance=ExtResource( 8 )]
position = Vector2( 784, 552 )

[node name="Temp-Bush16" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="38" instance=ExtResource( 8 )]
position = Vector2( 808, 288 )

[node name="Temp-Bush17" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="39" instance=ExtResource( 8 )]
position = Vector2( 600, 256 )

[node name="Temp-Bush6" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="40" instance=ExtResource( 8 )]
position = Vector2( 1000, 664 )

[node name="Temp-Bush7" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="41" instance=ExtResource( 8 )]
position = Vector2( 128, 688 )

[node name="Temp-Bush8" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="42" instance=ExtResource( 8 )]
position = Vector2( 112, 312 )

[node name="Temp-Bush9" parent="RoomGenerator/BranchForRooms/StartingRoom/ForMemberBranch" index="43" instance=ExtResource( 8 )]
position = Vector2( 704, 712 )

[node name="StartingRoom2" parent="RoomGenerator/BranchForRooms" instance=ExtResource( 9 )]
position = Vector2( 0, -768 )
available_nodes = {
0: 1,
1: 2,
2: 1,
3: 1
}

[node name="TileMap" parent="RoomGenerator/BranchForRooms/StartingRoom2" index="0"]
tile_set = SubResource( 3 )
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 1, 0, 12, 1, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 1, 0, 65548, 1, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 0, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 1, 0, 720902, 1, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0 )

[node name="CollisionShape2D" parent="RoomGenerator/BranchForRooms/StartingRoom2" index="1"]
shape = SubResource( 4 )

[node name="Temp-Tree" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="0" instance=ExtResource( 10 )]
position = Vector2( 776, 48 )

[node name="Temp-Tree2" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="1" instance=ExtResource( 10 )]
position = Vector2( 1112, 392 )

[node name="Temp-Tree3" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="2" instance=ExtResource( 10 )]
position = Vector2( 32, 384 )

[node name="Temp-Tree4" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="3" instance=ExtResource( 10 )]
position = Vector2( 416, 400 )

[node name="Temp-Tree5" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="4" instance=ExtResource( 10 )]
position = Vector2( 544, 688 )

[node name="Temp-Tree6" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="5" instance=ExtResource( 10 )]
position = Vector2( 824, 584 )

[node name="Temp-Tree7" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="6" instance=ExtResource( 10 )]
position = Vector2( 1032, 704 )

[node name="Temp-Tree8" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="7" instance=ExtResource( 10 )]
position = Vector2( 896, 288 )

[node name="Temp-Tree9" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="8" instance=ExtResource( 10 )]
position = Vector2( 1024, 104 )

[node name="Temp-Tree10" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="9" instance=ExtResource( 10 )]
position = Vector2( 544, 208 )

[node name="Temp-Tree11" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="10" instance=ExtResource( 10 )]
position = Vector2( 232, 128 )

[node name="Temp-Tree12" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="11" instance=ExtResource( 10 )]
position = Vector2( 184, 280 )

[node name="Temp-Tree13" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="12" instance=ExtResource( 10 )]
position = Vector2( 128, 520 )

[node name="Temp-Tree14" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="13" instance=ExtResource( 10 )]
position = Vector2( 248, 688 )

[node name="Temp-Tree15" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="14" instance=ExtResource( 10 )]
position = Vector2( 104, 704 )

[node name="Temp-Bush" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="15" instance=ExtResource( 8 )]
position = Vector2( 392, 264 )

[node name="Temp-Bush2" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="16" instance=ExtResource( 8 )]
position = Vector2( 528, 96 )

[node name="Temp-Bush3" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="17" instance=ExtResource( 8 )]
position = Vector2( 72, 112 )

[node name="Temp-Bush4" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="18" instance=ExtResource( 8 )]
position = Vector2( 1032, 216 )

[node name="Temp-Bush5" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="19" instance=ExtResource( 8 )]
position = Vector2( 1000, 592 )

[node name="Temp-Bush6" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="20" instance=ExtResource( 8 )]
position = Vector2( 792, 736 )

[node name="Temp-Bush7" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="21" instance=ExtResource( 8 )]
position = Vector2( 144, 632 )

[node name="Temp-Bush8" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="22" instance=ExtResource( 8 )]
position = Vector2( 456, 536 )

[node name="Temp-Bush9" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="23" instance=ExtResource( 8 )]
position = Vector2( 664, 360 )

[node name="Temp-Bush10" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="24" instance=ExtResource( 8 )]
position = Vector2( 208, 424 )

[node name="Temp-Bush11" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="25" instance=ExtResource( 8 )]
position = Vector2( 808, 472 )

[node name="Temp-Bush12" parent="RoomGenerator/BranchForRooms/StartingRoom2/ForMemberBranch" index="26" instance=ExtResource( 8 )]
position = Vector2( 376, 776 )

[node name="BranchForMembers" type="YSort" parent="RoomGenerator"]

[node name="Player" parent="RoomGenerator/BranchForMembers" instance=ExtResource( 5 )]
position = Vector2( 576, 384 )

[node name="CanvasLayer" type="CanvasLayer" parent="RoomGenerator"]

[node name="HUD" type="VBoxContainer" parent="RoomGenerator/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -584.32
margin_top = -403.5
margin_right = 584.32
margin_bottom = 403.5
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSpacer" type="Control" parent="RoomGenerator/CanvasLayer/HUD"]
margin_right = 1168.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="CompassCont" type="HBoxContainer" parent="RoomGenerator/CanvasLayer/HUD"]
margin_top = 24.0
margin_right = 1168.0
margin_bottom = 224.0
rect_min_size = Vector2( 600, 200 )
alignment = 2

[node name="Compass" parent="RoomGenerator/CanvasLayer/HUD/CompassCont" instance=ExtResource( 3 )]
margin_left = 1114.0
margin_right = 1114.0
margin_bottom = 200.0

[node name="HSpacer" type="Control" parent="RoomGenerator/CanvasLayer/HUD/CompassCont"]
margin_left = 1118.0
margin_right = 1168.0
margin_bottom = 200.0
rect_min_size = Vector2( 50, 0 )

[node name="VSpacer_MidScreen" type="Control" parent="RoomGenerator/CanvasLayer/HUD"]
margin_top = 228.0
margin_right = 1168.0
margin_bottom = 728.0
rect_min_size = Vector2( 0, 500 )

[node name="LandmarkContainer" type="HBoxContainer" parent="RoomGenerator/CanvasLayer/HUD"]
margin_top = 732.0
margin_right = 1168.0
margin_bottom = 732.0
alignment = 1

[node name="0" type="TextureRect" parent="RoomGenerator/CanvasLayer/HUD/LandmarkContainer"]
visible = false
margin_left = 547.0
margin_right = 620.0
margin_bottom = 65.0
texture = ExtResource( 2 )

[node name="1" type="ColorRect" parent="RoomGenerator/CanvasLayer/HUD/LandmarkContainer"]
visible = false
margin_left = 585.0
margin_right = 660.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
color = Color( 0, 0, 0, 0.337255 )

[node name="2" type="ColorRect" parent="RoomGenerator/CanvasLayer/HUD/LandmarkContainer"]
visible = false
margin_left = 624.0
margin_right = 699.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
color = Color( 0, 0, 0, 0.337255 )

[node name="3" type="ColorRect" parent="RoomGenerator/CanvasLayer/HUD/LandmarkContainer"]
visible = false
margin_left = 664.0
margin_right = 739.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
color = Color( 0, 0, 0, 0.337255 )
[connection signal="resized" from="RoomGenerator/CanvasLayer/HUD" to="RoomGenerator/CanvasLayer/HUD" method="_on_HUD_resized"]

[editable path="RoomGenerator/BranchForRooms/StartingRoom"]

[editable path="RoomGenerator/BranchForRooms/StartingRoom2"]

[editable path="RoomGenerator/CanvasLayer/HUD/CompassCont/Compass"]
